# aurora-term

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  PLAN.md  README.md  index.html  opencode.json  package-lock.json  package.json  persistency_plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: publish.yml
adr/: 0001-split-the-app-into-a-rust-backend-and-react-frontend.md  0002-centralize-tauri-ipc-behind-typed-frontend-wrappers.md  0003-render-terminal-output-as-session-blocks-in-react.md  0004-integrate-ai-providers-directly-in-rust.md  0005-keep-one-pty-session-per-tab.md  0006-split-the-rust-backend-into-crates.md  0007-use-pnpm-workspaces-for-frontend-packages.md  0008-recover-from-conpty-deadlocks-by-restarting-the-session.md  README.md
app/: package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/components/ai/: AICommandBar.tsx
app/src/components/editor/: CommitDiffView.tsx  DiffEditor.tsx  DiffWorkspaceView.tsx  FileViewer.tsx  PathBreadcrumb.tsx  SearchPanel.tsx  editorThemes.ts  minimapExtension.ts
app/src/components/git/: ChangesDiffView.tsx  GitView.tsx
app/src/components/layout/: AppContextMenu.tsx  AppHeader.tsx  CommandInputBar.tsx  SaveChangesModal.tsx
app/src/components/settings/: AISettingsView.tsx  AboutSettingsView.tsx  AppearanceSettingsView.tsx  EditorSettingsView.tsx  KeybindingsSettingsView.tsx  ProviderDetailView.tsx  ProviderIcon.tsx  ProviderSelector.tsx  SettingsModal.tsx  SettingsPage.tsx  SettingsShared.tsx  WindowSettingsView.tsx  WorkspaceSettingsView.tsx  settingsManifest.ts
app/src/components/terminal/: AgentChainNode.tsx  AgentHeroView.tsx  AgentOverlay.tsx  GhostInput.tsx  InputBar.tsx  ProviderSetupPrompt.tsx  TerminalBlock.tsx  TerminalPane.tsx
app/src/components/ui/: Button.tsx  EmptyState.tsx  FileOutline.tsx  FileTimeline.tsx  GitGraph.tsx  GitTree.tsx  IconButton.tsx  LoadingSpinner.tsx  MenuView.tsx  Modal.tsx  OpenTabs.tsx  RightClickMenu.tsx  ScrollLoader.tsx  SidePanel.tsx  StatusBar.tsx  TabBar.tsx  ToggleSwitch.tsx  Tooltip.tsx  WindowControls.tsx
app/src/hooks/: useAgentExecution.ts  useAppBootstrap.ts  useCommandExecution.ts  useCopyWithFeedback.ts  useDragResize.ts  useGitWatcher.ts  useHistoryNavigation.ts  useKeybindings.ts  useOpenTabs.ts  usePTY.ts  usePersistUIState.ts  useResizeObserver.ts  useTargetSessionId.ts  useWindowClamp.ts
app/src/lib/: agentUtils.ts  aiUtils.ts  ansiParser.ts  codeCompletions.ts  codeLang.ts  events.ts  fileUtils.ts  gitUtils.ts  ipc.ts  markdown.tsx  nlClassifier.ts  pathUtils.ts  popups.ts  settings.ts  shell.ts  theme.ts  time.ts  xtermTheme.ts
app/src/lib/terminal/: blockUtils.ts  cleanup.ts
app/src/stores/: useAIStore.ts  useAgentStore.ts  useAppShellStore.ts  useBlockStore.ts  useGitStore.ts  useSessionStore.ts  useSettingsStore.ts
app/src/styles/: globals.css
app/src/types/: ai.ts  ipc.ts  session.ts
app/src/views/: AgentView.tsx  AppShellView.tsx  FileWorkspaceView.tsx  NewWindowView.tsx  TerminalWorkspaceView.tsx
crates/aurora-ai/: Cargo.toml
crates/aurora-ai/src/: client.rs  lib.rs  prompts.rs  router.rs
crates/aurora-ai/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/aurora-commands/: Cargo.toml
crates/aurora-commands/src/: lib.rs  state.rs  watcher.rs
crates/aurora-commands/src/commands/: ai_commands.rs  config_commands.rs  fs_commands.rs  history_commands.rs  mod.rs  process_commands.rs  pty_commands.rs  sidecar_commands.rs  state_commands.rs  system_commands.rs
crates/aurora-config/: Cargo.toml
crates/aurora-config/src/: keychain.rs  lib.rs  loader.rs  manager.rs  state.rs
crates/aurora-core/: Cargo.toml
crates/aurora-core/src/: config.rs  error.rs  lib.rs
crates/aurora-core/src/types/: ai.rs  block.rs  mod.rs  session.rs
crates/aurora-db/: Cargo.toml
crates/aurora-db/src/: db.rs  search.rs
crates/aurora-pty/: Cargo.toml
crates/aurora-pty/src/: lib.rs  manager.rs  session.rs  shell.rs
crates/aurora-sidecar/: Cargo.toml
crates/aurora-sidecar/src/: config_writer.rs  lib.rs  manager.rs  monitor.rs
scripts/: fetch-opencode-binary.ps1  fetch-opencode-binary.sh  size-audit.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  mod.rs  prompts.rs  router.rs
src-tauri/src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: ai_commands.rs  config_commands.rs  fs_commands.rs  history_commands.rs  process_commands.rs  pty_commands.rs  system_commands.rs
src-tauri/src/config/: loader.rs  mod.rs  schema.rs
src-tauri/src/history/: db.rs  mod.rs  search.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs
src-tauri/src/state/: mod.rs
src/components/settings/: SettingsModal.tsx
src/components/terminal/: GhostInput.tsx  InputBar.tsx  OutputRenderer.tsx  PromptBar.tsx  TerminalBlock.tsx  TerminalPane.tsx
src/components/ui/: SidePanel.tsx  StatusBar.tsx  TabBar.tsx  WindowControls.tsx
src/hooks/: useAICompletion.ts  useCommandHistory.ts  useKeybindings.ts  usePTY.ts
src/lib/: ipc.ts  xtermTheme.ts
src/lib/terminal/: blockAnchors.ts
src/stores/: useAIStore.ts  useBlockStore.ts  useSessionStore.ts
src/styles/: globals.css
src/types/: ai.ts  block.ts  session.ts
tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: lib.rs  main.rs
