# ══════════════════════════════════════════════════════════
# crates/aurora-config/Cargo.toml
# Load/save config.toml + OS keychain access.
# Uses Tauri for resolving app_config_dir() at runtime.
# All config structs live in aurora-core — this crate
# only handles the I/O layer.
# ══════════════════════════════════════════════════════════
[package]
name    = "aurora-config"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-core = { workspace = true }
tauri       = { workspace = true }
toml        = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
keyring     = { workspace = true }
