# ══════════════════════════════════════════════════════════
# crates/aurora-config/Cargo.toml
# Load/save aurora.json + OS keychain access.
# Paths resolved by the caller — no Tauri dependency here.
# Config structs live in aurora-core; this crate does I/O.
# ══════════════════════════════════════════════════════════
[package]
name    = "aurora-config"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-core = { workspace = true }
serde_json  = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
keyring     = { workspace = true }
tracing     = { workspace = true }
