# ══════════════════════════════════════════════════════════
# crates/aurora-sidecar/Cargo.toml
# aurora-agent process lifecycle: spawn, health check,
# crash monitoring.
# No Tauri types — takes paths and ports as plain values.
# ══════════════════════════════════════════════════════════
[package]
name    = "aurora-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-core   = { workspace = true }
aurora-config = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
which         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
