# ══════════════════════════════════════════════════════════
# crates/aurora-sidecar/Cargo.toml
# aurora-agent process lifecycle: spawn, health check,
# crash monitoring.
# No Tauri types — takes paths and ports as plain values.
# ══════════════════════════════════════════════════════════
[package]
name    = "aurora-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-core = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
